<resources>
    <string name="app_name">Instagram</string>
    <string name="icons">Icons</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="haveUser">Already have a user? Click here</string>
    <string name="loading">Loading…</string>
    <string name="newUser">Don\'t have an account? Register</string>

    <string name="search">Search…</string>
    <string name="userName">username</string>
    <string name="Name">name</string>

    <string name="post">POST</string>
    <string name="description">Description…</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="view_post_fragment">View Post</string>
    <string name="view_comments_fragment">View Comments Fragment</string>
    <string name="view_profile_fragment">View Profile Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nameTest">Mr.D</string>
    <string name="profile_fragment2">Profile</string>

    <!--Intent extras-->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="intent_user">intent_user</string>

    <!--Bundle arg names-->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>


    <!--activity names-->
    <string name="profile_activity">Profile Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="search_activity">Search Activity</string>

    <!--Settings Options-->

    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>

    <string name="auth_failed">The authentication was failed</string>

    <!--Firebase Database fields-->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">users_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>

    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>


    <!--dialogs names-->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>

    <!--string-->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_post">Post</string>

    <!--photo types-->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
</resources>