<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/instagram_icon"
        android:layout_centerInParent="true"
        android:id="@+id/icon_image"
        android:visibility="invisible"
        android:contentDescription="@string/icons" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/icon_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/icons"
            android:src="@drawable/instagram_logo"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textAllCaps="false" />
    </LinearLayout>

</RelativeLayout>